--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google" #"false" # false (default), "google", "google-universal", "google-analytics-4", "custom"
+  provider               :  "google-analytics-4" #"false" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
     tracking_id          : "G-4QXBHSK0VH"
 
