--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,5 +29,5 @@ main:
   - title: "About Me"
     url: /about/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
