--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,11 +23,12 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
 #
-  - title: "CV"
-    url: /cv/
-    
   - title: "About Me"
     url: /about/
     
-#  - title: "Guide"
-#    url: /markdown/
+  - title: "CV"
+    url: /cv/
+
+    
+  - title: "Research"
+    url: /research/
