updated favicon and description

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "OOjs UI icon academic-progressive",
+	"name": "OOjs UI icon data_world",
 	"icons": [
 		{
 			"src": "/images/favicon-192x192.png",
