--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,10 +25,14 @@ main:
 #
   - title: "About Me"
     url: /about/
-    
+
   - title: "CV"
     url: /cv/
 
     
   - title: "Research"
     url: /research/
+
+
+  - title: "Not Research"
+    url: /not_research/
