--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,8 +23,8 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
 #
-  - title: "About Me"
-    url: /about/
+#  - title: "About Me"
+#    url: /about/
 
   - title: "CV"
     url: /cv/
